style.css
* {
  box-sizing: border-box;
}

h1,
p {
  margin: 0;
}

html {
  font-size: 13px;
}

:root {
  /* Font Colors */
  --color-text-primary: hsl(217, 19%, 35%);
  --color-text-secondary: hsl(214, 17%, 51%);
  --color-text-muted: hsl(212, 23%, 69%);

  /* Background Colors */
  --color-muted-background: hsl(210, 46%, 95%);
  --color-white-background: hsl(0, 0%, 100%);

  /* Font Weights */
  --fw-medium: 500;
  --fw-bold: 700;

  /* Shadows */
  --card-shadow: hsla(206, 24%, 34%, 0.08);
  --card-share-shadow: hsla(214, 17%, 51%, 0.671);
}

@font-face {
  font-family: 'Manrope';
  src: url('./assets/fonts/Manrope-Medium.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Manrope';
  src: url('./assets/fonts/Manrope-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
}

body {
  background-color: var(--color-muted-background);
  font-family: 'Manrope', sans-serif;
  padding: 0 1rem;
  margin-block-start: 5.5rem;
}

img {
  display: block;
  width: 100%;
}

.card {
  background-color: var(--color-white-background);
  box-shadow: 1rem 1rem 1.2rem var(--card-shadow);
  border-radius: 0.67rem;
  position: relative;
}

.card__image {
  border-start-start-radius: 0.67rem;
  border-start-end-radius: 0.67rem;
  margin-block-start: 4rem;

  aspect-ratio: 16 / 9;
  object-fit: cover;
}

.card__content {
  padding: 2.77rem;
  padding-block-end: 1.37rem;
}

.card__title {
  font-size: clamp(1.27rem, 3vw, 1.57rem);
}

.card__title,
.author__name {
  color: var(--color-text-primary);
  font-weight: var(--fw-bold);
}

.card__description {
  color: var(--color-text-secondary);
  font-size: 1.02rem;
  line-height: 1.5;

  margin: 1.27rem 0;
  margin-block-end: 2.5rem;
}

.card__meta {
  width: 100%;

  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.card__date {
  color: var(--color-text-muted);
}

.card__author {
  display: flex;
  align-items: center;
  gap: 1.37rem;
}

.author__image {
  border-radius: 50%;
  width: 3rem;
}

.card__share {
  background-color: var(--color-text-primary);
  border-end-start-radius: 0.67rem;
  border-end-end-radius: 0.67rem;
  letter-spacing: 0.3rem;
  padding: 2rem 2.5rem;

  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;

  display: flex;
  align-items: center;
  gap: 1rem;
}

.card__share p {
  color: var(--color-text-muted);
}

.share__button {
  border-radius: 50%;
  background-image: url('./assets/images/icon-share.svg');
  background-repeat: no-repeat;
  background-position: 50% 45%;
  height: 2.6rem;
  width: 2.6rem;
  margin-inline-start: auto;

  z-index: 2;
}

.share__button,
.card__share-icon {
  border: none;
  outline: none;
  cursor: pointer;
}

.share__button:focus {
  box-shadow: 0 0 0 0.15rem var(--color-text-primary);
}

.card__share-icon {
  background: none;
  padding: 0.15rem;
}

.card__share-icon:focus {
  box-shadow: 0 0 0 0.15rem var(--color-white-background);
}

/* Utility */
.share__button--dark {
  background-image: url('./assets/images/icon-share-white.svg');
  background-color: var(--color-text-secondary);
}

.hidden {
  display: none;
}

@media screen and (min-width: 42.375rem) {
  body {
    margin: 0;
  }

  .card__share {
    border-radius: 0.6rem;
    box-shadow: 0.37rem 0.37rem 0.87rem var(--card-share-shadow);
    padding: 1.37rem 2.8rem;
    width: auto;
    bottom: 5rem;
    right: -5.27rem;
  }

  .card__share::after {
    content: '';
    position: absolute;
    bottom: -0.55rem;
    left: 50%;
    width: 1rem;
    height: 1rem;
    background: var(--color-text-primary);
    transform: rotate(45deg);
    translate: -50% 0;
  }

  .wrapper {
    min-height: 100vh;

    display: flex;
    align-items: center;
  }

  .main {
    margin: 0 auto;
    max-width: 57rem;
  }

  .card {
    display: flex;
  }

  .card__image {
    border-radius: 0;
    border-start-start-radius: 0.67rem;
    border-end-start-radius: 0.67rem;
    margin-block-start: 0;

    max-width: 40%;
  }
}

